--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -6,5 +6,5 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using dotnet_gui
-@using dotnet_gui.Components
+@using csharp_gui_app
+@using csharp_gui_app.Components
