--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">dotnet_gui</a>
+        <a class="navbar-brand" href="">csharp_gui_app</a>
     </div>
 </div>
 
@@ -21,16 +21,15 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="tictactoe">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Tic Tac Toe
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
             <NavLink class="nav-link" href="weather">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="tictactoe">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Tic Tac Toe
+            </NavLink>
+        </div
     </nav>
 </div>
 
