--- a/Components/Pages/TicTacToe.razor
+++ b/Components/Pages/TicTacToe.razor
@@ -2,17 +2,26 @@
 @rendermode InteractiveServer
 <h3>TicTacToe</h3>
 
-<table>
-    @for (int i = 0; i< 3; i++){
-        <tr>
-            @for(int j = 0; j < 3; j++){
-                <th>@symbol</th>
-            }
-        </tr>
-    }
-</table>
+<h3> Current Player: @symbol </h3>
+
+<div class="container">
+	@for(int j = 0; j < 9; j++){
+		var i = j;
+		<div class="cell" @onclick="@(() => { handleClick(i); })">
+			@squares[j]
+		</div>
+	}
+</div>
 
 @code {
+	int i = 0;
     string symbol = "X";
+	List<string> squares = new List<string> { " ", " ", " ", " ", " ", " ", " ", " ", " " };
+	private void handleClick(int index) {
+		Console.WriteLine(index);
+		if (squares[index] != " ") return;
+		squares[index] = symbol;
+		symbol = symbol == "X" ? "O" : "X";
+	}
 
 }
