--- a/Components/Pages/TicTacToe.razor
+++ b/Components/Pages/TicTacToe.razor
@@ -2,6 +2,9 @@
 @rendermode InteractiveServer
 <h3>TicTacToe</h3>
 
+
+@if (!win)
+{
 <h3> Current Player: @symbol </h3>
 
 <div class="container">
@@ -12,16 +15,42 @@
 		</div>
 	}
 </div>
+}
+else {
+	<h3> Player @symbol won </h3>
+}
 
 @code {
 	int i = 0;
-    string symbol = "X";
-	List<string> squares = new List<string> { " ", " ", " ", " ", " ", " ", " ", " ", " " };
+    char symbol = 'X';
+	char winner = ' ';
+	bool win = false;
+	List<char> squares = new List<char> { ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ' };
 	private void handleClick(int index) {
 		Console.WriteLine(index);
-		if (squares[index] != " ") return;
+		if (checkWin(squares)) {
+			winner = symbol;
+			win = true;
+			Console.WriteLine("win");
+			return;
+		}
+		if (squares[index] != ' ') return;
 		squares[index] = symbol;
-		symbol = symbol == "X" ? "O" : "X";
+		symbol = symbol == 'X' ? 'O' : 'X';
+	}
+	private bool checkWin(List<char> squares) {
+	Console.WriteLine(squares[0] + " " + squares[1] + " " + squares[2]);
+		if (squares[0] == squares[1] && squares[1] == squares[2] && squares[0] != ' ') return true;
+		if (squares[3] == squares[4] && squares[4] == squares[5] && squares[3] != ' ') return true;
+		if (squares[6] == squares[7] && squares[7] == squares[8] && squares[6] != ' ') return true;
+		if (squares[0] == squares[3] && squares[3] == squares[6] && squares[0] != ' ') return true;
+		if (squares[1] == squares[4] && squares[4] == squares[7] && squares[1] != ' ') return true;
+		if (squares[2] == squares[5] && squares[5] == squares[8] && squares[2] != ' ') return true;
+		if (squares[0] == squares[4] && squares[4] == squares[8] && squares[0] != ' ') return true;
+		if (squares[2] == squares[4] && squares[4] == squares[6] && squares[2] != ' ') return true;
+		return false;
+			
+		
 	}
 
 }
